[package]
name = "ds"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
net = { path = "../net" }
errors = { path = "../errors" }
files = { path = "../files" }
thread_pool = { path = "../thread_pool" }
crossterm = "0.28.1"
common = { path = "../common" }
network-interface = "2.0.1"

